Add pagination support to Item, Booking, and ItemRequest in server and gateway